import 'package:caregarden_cmd/modelos/agendamento/agendamento.dart';

class Podamento extends Agendamento {
  Podamento({
    required super.id,
    required super.planta,
    required super.data,
    required super.evento,
  });
}
