import 'package:caregarden_cmd/modelos/agendamento/agendamento.dart';

class Regamento extends Agendamento {
  Regamento({
    required super.id,
    required super.planta,
    required super.data,
    required super.evento,
  });
}
