import 'package:caregarden_cmd/modelos/agendamento/agendamento.dart';

class Replantio extends Agendamento {
  Replantio({
    required super.id,
    required super.planta,
    required super.data,
    required super.evento,
  });
}
