import 'package:caregarden_cmd/modelos/agendamento/agendamento.dart';

class TrocaDeVaso extends Agendamento {
  TrocaDeVaso({
    required super.id,
    required super.planta,
    required super.data,
    required super.evento,
  });
}
